--- a/index.html
+++ b/index.html
@@ -554,22 +554,20 @@
             <!--PC端可见【手风琴】start-->
             <div class="accordion hidden-xs hidden-sm fadeInUp animated-fast " id="zA7n">
                 <ul class="accordion__ul">
-                    <li class="accordion__li animate-box" v-for="(item,index) in imgs">
-                        <div class="accordion__img" :class="'bg-color-'+(index+1)">
-                            <h2><a href="industry_petrified.html">{{item.title}}</a></h2>
-                            <p>
-                                {{item.content}}
+                    <li class="accordion__li animate-box">
+                        <div class="accordion__img bg-color-1">
+                            <h2><a href="industry_petrified.html">石化能源</a></h2>
+                            <p>海科集团石化板块现有海科化工、瑞林化工、石化销售公司、石化供应公司、海达物流公司、海科港务公司、柏森检测公司、海源公司、普安公司、小海豚能源科技、汇链科技、亿维新材料等十余家子公司。依托近30年炼化经验，海科石化积极促进产品结构转型优化，现已形成覆盖国际贸易、石油炼化、高端油品研发、终端配送、危化品智慧物流和港口服务、独立第三方检测和质量控制、终端连锁品牌加油站、电商运营、安全环保管理、五星级服务等一体化的全产业链条，致力于“构建数字化经营体系，成为智能高效的能源服务商”
                             </p>
                             <span class="icon">
-                                <img width="20" height="20" :src="item.imgPath" alt="">
-                            </span>
+									<i class="hk">&#xe649;</i>
+								</span>
                         </div>
                     </li>
-                    <!--<li class="accordion__li animate-box">
+                    <li class="accordion__li animate-box">
                         <div class="accordion__img bg-color-2">
                             <h2><a href="industry_chemical.html">特种化学品</a></h2>
-                            <p>
-                                海科特种化学品营销遍及锂电、半导体、日化、医药、烟草、食品、涂料、染料、制造业等多个领域，在建二元醇类、石墨烯分散液、石墨烯导电浆料、盐酸羟胺、高纯氯化氢等项目，将满足市场日益增长的特种化学品需求，海科特种化学品始终秉承创新驱动可持续发展，坚持以客户为中心，以市场价值为导向，不断创新研发技术工艺、提供系统解决方案、打造五星级专家服务体系，为客户提供专家级、全方位、一站式的创新技术解决方案，旨在成为全球化、最具创新和专业技术服务能力的特种化学品专家品牌
+                            <p>海科特种化学品营销遍及锂电、半导体、日化、医药、烟草、食品、涂料、染料、制造业等多个领域，在建二元醇类、石墨烯分散液、石墨烯导电浆料、盐酸羟胺、高纯氯化氢等项目，将满足市场日益增长的特种化学品需求，海科特种化学品始终秉承创新驱动可持续发展，坚持以客户为中心，以市场价值为导向，不断创新研发技术工艺、提供系统解决方案、打造五星级专家服务体系，为客户提供专家级、全方位、一站式的创新技术解决方案，旨在成为全球化、最具创新和专业技术服务能力的特种化学品专家品牌
                             </p>
                             <span class="icon">
 									<i class="hk">&#xe625;</i>
@@ -579,8 +577,7 @@
                     <li class="accordion__li animate-box">
                         <div class="accordion__img bg-color-3">
                             <h2><a href="industry_energy.html">新能源材料</a></h2>
-                            <p>
-                                为适应当前新能源产业在全球的发展趋势，集团于2014年成立山东欧铂新材料有限公司，成为首批实现单层石墨烯量产的企业；于2016年成立安徽新衡新材料科技有限公司，致力于高端湿法隔膜产品的研发和生产服务；于2017年并购韩国PCT公司，成为石墨烯改性高容量炭技术拥有者；同年在新源公司建设电解液溶剂产线。全力助推全球的新能源发展，为各类储能产品提供源源不断持续可靠的电能，极大提高锂电池设备的充电效率和使用时间
+                            <p>为适应当前新能源产业在全球的发展趋势，集团于2014年成立山东欧铂新材料有限公司，成为首批实现单层石墨烯量产的企业；于2016年成立安徽新衡新材料科技有限公司，致力于高端湿法隔膜产品的研发和生产服务；于2017年并购韩国PCT公司，成为石墨烯改性高容量炭技术拥有者；同年在新源公司建设电解液溶剂产线。全力助推全球的新能源发展，为各类储能产品提供源源不断持续可靠的电能，极大提高锂电池设备的充电效率和使用时间
                             </p>
                             <span class="icon">
 									<i class="hk">&#xe616;</i>
@@ -590,8 +587,7 @@
                     <li class="accordion__li animate-box">
                         <div class="accordion__img bg-color-4">
                             <h2><a href="industry_medicine.html">医药</a></h2>
-                            <p>
-                                海科集团旗下东营天东制药有限公司通过研究和开发切实有效的医药解决方案，致力于为中国乃至全世界人民提高生活质量并延长生命。天东公司专注于血液系统用药研发，与国家糖工程技术研究中心建立稳定的产学研用合作关系。公司成立了博士后科研工作站、山东省生化药物工程实验室、省级企业技术中心等研发平台，先后承担了国家重大新药创制、科技支撑计划、火炬计划、重点新产品等国家级科研项目，申请专利保护20余项。公司参与了5种国内低分子肝素质量标准制定，为国产低分子肝素产业化与质量提升做出重要贡献
+                            <p>海科集团旗下东营天东制药有限公司通过研究和开发切实有效的医药解决方案，致力于为中国乃至全世界人民提高生活质量并延长生命。天东公司专注于血液系统用药研发，与国家糖工程技术研究中心建立稳定的产学研用合作关系。公司成立了博士后科研工作站、山东省生化药物工程实验室、省级企业技术中心等研发平台，先后承担了国家重大新药创制、科技支撑计划、火炬计划、重点新产品等国家级科研项目，申请专利保护20余项。公司参与了5种国内低分子肝素质量标准制定，为国产低分子肝素产业化与质量提升做出重要贡献
                             </p>
                             <span class="icon">
 									<i class="hk">&#xe61f;</i>
@@ -601,54 +597,50 @@
                     <li class="accordion__li animate-box">
                         <div class="accordion__img bg-color-5">
                             <h2><a href="industry_finance.html">融资租赁</a></h2>
-                            <p>
-                                海科集团旗下融资租赁公司（上海鼎益融资租赁有限公司与山东华元融资租赁有限公司）成立于2013年，2014年初正式开始运营。响应“国家制造2025”政策，公司专注于智能制造、智能物流等领域及供应链金融智能化服务，为成长型的中小生产企业提供全方位融资租赁服务，并助力纺织、电子、机械加工等传统企业的转型升级。现已与多家银行、设备制造厂商成为战略合作伙伴关系，秉承实业兴邦、助推民族复兴的服务宗旨，致力于成为专业、高效的综合融资解决方案提供方
+                            <p>海科集团旗下融资租赁公司（上海鼎益融资租赁有限公司与山东华元融资租赁有限公司）成立于2013年，2014年初正式开始运营。响应“国家制造2025”政策，公司专注于智能制造、智能物流等领域及供应链金融智能化服务，为成长型的中小生产企业提供全方位融资租赁服务，并助力纺织、电子、机械加工等传统企业的转型升级。现已与多家银行、设备制造厂商成为战略合作伙伴关系，秉承实业兴邦、助推民族复兴的服务宗旨，致力于成为专业、高效的综合融资解决方案提供方
                             </p>
                             <span class="icon">
 									<i class="hk">&#xe621;</i>
 								</span>
                         </div>
-                    </li>-->
+                    </li>
                 </ul>
             </div>
             <!--PC端可见【手风琴】end-->
 
             <!--移动端【对应PC-手风琴】可见start-->
             <div class="row visible-xs visible-sm">
-                <div class="col-md-4 animate-box fadeInUp animated-fast" v-for="(item,index) in imgs">
+                <div class="col-md-4 animate-box fadeInUp animated-fast">
                     <div class="services">
-							<span class="icon">
-								<i class="hk"><img width="20" height="20" :src="item.imgPath" alt=""></i>
+								<span class="icon">
+								<i class="hk">&#xe649;</i>
 							</span>
                         <div class="desc">
-                            <h3><a href="javascript:void(0);">{{item.title}}</a></h3>
-                            <p>
-                                {{item.content}}
+                            <h3><a href="javascript:void(0);">石化能源</a></h3>
+                            <p>海科集团石化板块现有海科化工、瑞林化工、石化销售公司、石化供应公司、海达物流公司、海科港务公司、柏森检测公司、海源公司、普安公司、小海豚能源科技、汇链科技、亿维新材料等十余家子公司。依托近30年炼化经验，海科石化积极促进产品结构转型优化，现已形成覆盖国际贸易、石油炼化、高端油品研发、终端配送、危化品智慧物流和港口服务、独立第三方检测和质量控制、终端连锁品牌加油站、电商运营、安全环保管理、五星级服务等一体化的全产业链条，致力于“构建数字化经营体系，成为智能高效的能源服务商”
                             </p>
-                        </div>
-                    </div>
-                </div>
-                <!--<div class="col-md-4 animate-box fadeInUp animated-fast">
-                    <div class="services">
-							<span class="icon">
-								<i class="hk">&#xe625;</i>
-							</span>
-                        <div class="desc">
-                            <h3><a href="javascript:void(0);">特种化学品</a></h3>
-                            <p>
-                                海科特种化学品营销遍及锂电、半导体、日化、医药、烟草、食品、涂料、染料、制造业等多个领域，在建二元醇类、石墨烯分散液、石墨烯导电浆料、盐酸羟胺、高纯氯化氢等项目，将满足市场日益增长的特种化学品需求，海科特种化学品始终秉承创新驱动可持续发展，坚持以客户为中心，以市场价值为导向，不断创新研发技术工艺、提供系统解决方案、打造五星级专家服务体系，为客户提供专家级、全方位、一站式的创新技术解决方案，旨在成为全球化、最具创新和专业技术服务能力的特种化学品专家品牌</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 animate-box fadeInUp animated-fast">
                     <div class="services">
-							<span class="icon">
+								<span class="icon">
+								<i class="hk">&#xe625;</i>
+							</span>
+                        <div class="desc">
+                            <h3><a href="javascript:void(0);">特种化学品</a></h3>
+                            <p>海科特种化学品营销遍及锂电、半导体、日化、医药、烟草、食品、涂料、染料、制造业等多个领域，在建二元醇类、石墨烯分散液、石墨烯导电浆料、盐酸羟胺、高纯氯化氢等项目，将满足市场日益增长的特种化学品需求，海科特种化学品始终秉承创新驱动可持续发展，坚持以客户为中心，以市场价值为导向，不断创新研发技术工艺、提供系统解决方案、打造五星级专家服务体系，为客户提供专家级、全方位、一站式的创新技术解决方案，旨在成为全球化、最具创新和专业技术服务能力的特种化学品专家品牌</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 animate-box fadeInUp animated-fast">
+                    <div class="services">
+								<span class="icon">
 								<i class="hk">&#xe616;</i>
 							</span>
                         <div class="desc">
                             <h3><a href="javascript:void(0);">新能源材料</a></h3>
-                            <p>
-                                为适应当前新能源产业在全球的发展趋势，集团于2014年成立山东欧铂新材料有限公司，成为首批实现单层石墨烯量产的企业；于2016年成立安徽新衡新材料科技有限公司，致力于高端湿法隔膜产品的研发和生产服务；于2017年并购韩国PCT公司，成为石墨烯改性高容量炭技术拥有者；同年在新源公司建设电解液溶剂产线。全力助推全球的新能源发展，为各类储能产品提供源源不断持续可靠的电能，极大提高锂电池设备的充电效率和使用时间
+                            <p>为适应当前新能源产业在全球的发展趋势，集团于2014年成立山东欧铂新材料有限公司，成为首批实现单层石墨烯量产的企业；于2016年成立安徽新衡新材料科技有限公司，致力于高端湿法隔膜产品的研发和生产服务；于2017年并购韩国PCT公司，成为石墨烯改性高容量炭技术拥有者；同年在新源公司建设电解液溶剂产线。全力助推全球的新能源发展，为各类储能产品提供源源不断持续可靠的电能，极大提高锂电池设备的充电效率和使用时间
                             </p>
                         </div>
                     </div>
@@ -656,29 +648,27 @@
 
                 <div class="col-md-4 animate-box fadeInUp animated-fast">
                     <div class="services">
-							<span class="icon">
+								<span class="icon">
 								<i class="hk">&#xe61f;</i>
 							</span>
                         <div class="desc">
                             <h3><a href="javascript:void(0);">医药</a></h3>
-                            <p>
-                                海科集团旗下东营天东制药有限公司通过研究和开发切实有效的医药解决方案，致力于为中国乃至全世界人民提高生活质量并延长生命。天东公司专注于血液系统用药研发，与国家糖工程技术研究中心建立稳定的产学研用合作关系。公司成立了博士后科研工作站、山东省生化药物工程实验室、省级企业技术中心等研发平台，先后承担了国家重大新药创制、科技支撑计划、火炬计划、重点新产品等国家级科研项目，申请专利保护20余项。公司参与了5种国内低分子肝素质量标准制定，为国产低分子肝素产业化与质量提升做出重要贡献</p>
+                            <p>海科集团旗下东营天东制药有限公司通过研究和开发切实有效的医药解决方案，致力于为中国乃至全世界人民提高生活质量并延长生命。天东公司专注于血液系统用药研发，与国家糖工程技术研究中心建立稳定的产学研用合作关系。公司成立了博士后科研工作站、山东省生化药物工程实验室、省级企业技术中心等研发平台，先后承担了国家重大新药创制、科技支撑计划、火炬计划、重点新产品等国家级科研项目，申请专利保护20余项。公司参与了5种国内低分子肝素质量标准制定，为国产低分子肝素产业化与质量提升做出重要贡献</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 animate-box fadeInUp animated-fast">
                     <div class="services">
-							<span class="icon">
+								<span class="icon">
 								<i class="hk">&#xe621;</i>
 							</span>
                         <div class="desc">
                             <h3><a href="javascript:void(0);">融资租赁</a></h3>
-                            <p>
-                                海科集团旗下融资租赁公司（上海鼎益融资租赁有限公司与山东华元融资租赁有限公司）成立于2013年，2014年初正式开始运营。响应“国家制造2025”政策，公司专注于智能制造、智能物流等领域及供应链金融智能化服务，为成长型的中小生产企业提供全方位融资租赁服务，并助力纺织、电子、机械加工等传统企业的转型升级。现已与多家银行、设备制造厂商成为战略合作伙伴关系，秉承实业兴邦、助推民族复兴的服务宗旨，致力于成为专业、高效的综合融资解决方案提供方
+                            <p>海科集团旗下融资租赁公司（上海鼎益融资租赁有限公司与山东华元融资租赁有限公司）成立于2013年，2014年初正式开始运营。响应“国家制造2025”政策，公司专注于智能制造、智能物流等领域及供应链金融智能化服务，为成长型的中小生产企业提供全方位融资租赁服务，并助力纺织、电子、机械加工等传统企业的转型升级。现已与多家银行、设备制造厂商成为战略合作伙伴关系，秉承实业兴邦、助推民族复兴的服务宗旨，致力于成为专业、高效的综合融资解决方案提供方
                             </p>
                         </div>
                     </div>
-                </div>-->
+                </div>
             </div>
             <!--移动端【对应PC-手风琴】可见end-->
 
@@ -690,16 +680,16 @@
     <div id="qbootstrap-testimonial" class="qbootstrap-bg-section">
         <div class="container">
             <div class="row">
-
-                <div class="col-xs-12 col-sm-4  animate-box">
+                <!--animate-box-->
+                <div class="col-xs-12 col-sm-4" v-for="(item,index) in imgs">
                     <div class="wrap">
-                        <img class="all-img" src="images/fifth01.png" />
+                        <img class="all-img" :src="item.imgPath" />
                         <div class="img-txt">
-                            <a href="http://www.chinadmc.com"><span>电池化学品</span></a>
+                            <a href="javascript:;"><span>{{item.title}}</span></a>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-4  animate-box">
+                <!--<div class="col-xs-12 col-sm-4  animate-box">
                     <div class="wrap">
                         <img class="all-img" src="images/fifth02.png" />
                         <div class="img-txt">
@@ -718,7 +708,7 @@
 
                 <div class="col-xs-12 col-sm-4  animate-box">
                     <div class="wrap">
-                        <img class="all-img" src="images/fifth04.png" / style="height: 376px">
+                        <img class="all-img" src="images/fifth04.png">
                         <div class="img-txt">
                             <a href="http://www.chinadmc.com"><span>消费化学品</span></a>
                         </div>
@@ -726,7 +716,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-4  animate-box">
                     <div class="wrap">
-                        <img class="all-img" src="images/fifth05.png" / style="height: 376px">
+                        <img class="all-img" src="images/fifth05.png">
                         <div class="img-txt">
                             <a href="http://www.minidolphin.net.cn"><span>小海豚</span></a>
                         </div>
@@ -734,12 +724,12 @@
                 </div>
                 <div class="col-xs-12 col-sm-4 animate-box">
                     <div class="wrap">
-                        <img class="all-img" src="images/fifth06.png" / style="height: 376px">
+                        <img class="all-img" src="images/fifth06.png">
                         <div class="img-txt">
                             <a href="https://www.51wph.com"><span>危品汇</span></a>
                         </div>
                     </div>
-                </div>
+                </div>-->
 
 
             </div>
