--- a/employ_social.html
+++ b/employ_social.html
@@ -545,6 +545,7 @@
     new Vue({
         el: '.vueSwiper',
         data: {
+            api:api+'/',
             curIndex: 0,
             lunbo: [], //轮播图
             pageBanner:1, //页码
