--- a/about_introduce.html
+++ b/about_introduce.html
@@ -455,9 +455,10 @@
     new Vue({
         el: '.vueSwiper',
         data: {
-            type: 12, //集团介绍
+            api:api+'/',
+            //type: 12, //集团介绍
             list: {
-                content:'<h3>这是一个苹果</h3><p>张张</p><p>22222222222222222222222</p>'
+               content:''
             },
             page:1,
             rows:10,
