--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
         <div class="carousel-inner">
             <div class="item" :class="{active:curIndex==index}" v-for="(item,index) in lunbo">
                 <a :href="lunboPages[index]">
-                    <img :src="item.imgPath" alt="" style="width: 100%;">
+                    <img :src="api+item.imgPath" alt="" style="width: 100%;object-fit:cover;">
                 </a>
             </div>
         </div>
@@ -475,15 +475,16 @@
                         凭借销售业绩的高质量增长荣膺达沃斯论坛“全球成长型公司”称号，是“国家高新技术企业”、“中国企业500强”、“中国制造业500强”、“国家级智能制造试点示范项目”。近年来，海科围绕转型变革精准发力，企业保持了稳健的发展势头。2018年实现销售收入620亿元。
                     </p>
                 </div>-->
-                <div class="top-main" v-html="videoInfo.content"></div>
+                <div style="padding: 10px;" class="top-main" v-html="videoInfo.content"></div>
                 <!--<p class="main-box visible-xs visible-sm">
                     海科集团始建于1988年，目前已发展成为集石化能源、特种化学品、新能源材料、医药、融资租赁、国际贸易等为一体的综合性大型跨国企业集团。集团下属公司分布在东营、上海、江苏、浙江、安徽、香港、韩国和新加坡等国家和地区。集团总资产达185亿元，拥有员工4500余人。
                     凭借销售业绩的高质量增长荣膺达沃斯论坛“全球成长型公司”称号，是“国家高新技术企业”、“中国企业500强”、“中国制造业500强”、“国家级智能制造试点示范项目”。近年来，海科围绕转型变革精准发力，企业保持了稳健的发展势头。2018年实现销售收入620亿元。
                 </p>-->
-                <p class="main-box visible-xs visible-sm" v-html="videoInfo.content"></p>
+                <div style="padding: 10px;" class="main-box visible-xs visible-sm" v-html="videoInfo.content"></div>
 
             </div>
         </div>
+
 
         <!--视频列表-->
         <div class=" animate-box container">
@@ -491,13 +492,15 @@
                 <div class="container" style="text-align: center;">
                     <div class="col-xs-12 col-md-4 hidden-xs hidden-sm" v-for="(item,index) in videoList" :id="'play'+index">
                         <video
+                                v-if="item.videoPath"
                                 :index="index"
                                 :id="'video'+index"
                                 class="same-video" width="349.984" height="200"
                                 @mouseover="videoPlayback(index)"
                                 @mouseout="videoStopped(index)"
+                                :src="api+item.videoPath"
                         >
-                            <source :src="item.videoPath" type="video/mp4">
+                            <!--<source :src="api+item.videoPath" type="video/mp4">-->
                         </video>
                         <img src="images/play.jpg" class="videoed" :id="'img'+index"/>
                     </div>
@@ -505,7 +508,7 @@
                     <!--移动端-->
                     <div class="col-xs-12 col-md-4 hidden-md hidden-lg same-player" id="playFour" v-if="videoList.length>0">
                         <video id="mobileVideo" class="same-video" controls="controls">
-                            <source :src="videoList[videoList.length-1].videoPath" type="video/mp4">
+                            <source :src="api+videoList[videoList.length-1].videoPath" type="video/mp4">
                         </video>
                         <img src="images/play.jpg" class="videoed" id="mobileVideoImg" @click="mobileClick" />
                     </div>
@@ -548,11 +551,11 @@
         <div class="container">
             <div class="row animate-box">
                 <div class="col-md-6 col-md-offset-3 text-center qbootstrap-heading">
-                    <h2>产业布局</h2>
+                    <h2 style="text-align: center">产业布局</h2>
                 </div>
             </div>
             <!--PC端可见【手风琴】start-->
-            <div class="accordion hidden-xs hidden-sm fadeInUp animated-fast " id="zA7n">
+            <div class="accordion hidden-xs hidden-sm fadeInUp animated-fast" id="zA7n">
                 <ul class="accordion__ul">
                     <li class="accordion__li animate-box">
                         <div class="accordion__img bg-color-1">
@@ -683,59 +686,17 @@
                 <!--animate-box-->
                 <div class="col-xs-12 col-sm-4" v-for="(item,index) in imgs">
                     <div class="wrap">
-                        <img class="all-img" :src="item.imgPath" />
+                        <img class="all-img" :src="api+item.imgPath" />
                         <div class="img-txt">
                             <a href="javascript:;"><span>{{item.title}}</span></a>
                         </div>
                     </div>
                 </div>
-                <!--<div class="col-xs-12 col-sm-4  animate-box">
-                    <div class="wrap">
-                        <img class="all-img" src="images/fifth02.png" />
-                        <div class="img-txt">
-                            <a href="http://obo.haikegroup.com"><span class="size-big">石墨烯及下游应用</span></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-sm-4  animate-box">
-                    <div class="wrap">
-                        <img class="all-img" src="images/fifth03.png" />
-                        <div class="img-txt">
-                            <a href="industry_energy.html"><span>湿法隔膜</span></a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xs-12 col-sm-4  animate-box">
-                    <div class="wrap">
-                        <img class="all-img" src="images/fifth04.png">
-                        <div class="img-txt">
-                            <a href="http://www.chinadmc.com"><span>消费化学品</span></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-sm-4  animate-box">
-                    <div class="wrap">
-                        <img class="all-img" src="images/fifth05.png">
-                        <div class="img-txt">
-                            <a href="http://www.minidolphin.net.cn"><span>小海豚</span></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-sm-4 animate-box">
-                    <div class="wrap">
-                        <img class="all-img" src="images/fifth06.png">
-                        <div class="img-txt">
-                            <a href="https://www.51wph.com"><span>危品汇</span></a>
-                        </div>
-                    </div>
-                </div>-->
-
-
             </div>
         </div>
     </div>
     <!--3.图片区【3+2】-->
+
 
     <!--4.滚动数字start-->
     <div id="qbootstrap-counter" class="qbootstrap-counters" data-stellar-background-ratio="0.5">
@@ -821,7 +782,7 @@
     <div id="qbootstrap-choose">
         <div class="row animate-box">
             <div class="col-md-8 col-md-offset-2 text-center qbootstrap-heading">
-                <h2>管理与体系</h2>
+                <h2 style="text-align: center">管理与体系</h2>
                 <p class="sub-title">
                     海科在战略规划、人才盘点、组织架构设计、薪酬改革、安全提升、五星级营销服务体系打造、质量管控、项目管理等多个维度进行了系统变革，促进公司管理水平实现国际化、标杆化、专业化的突破。</p>
             </div>
@@ -872,7 +833,7 @@
                     <li class="tab-box" v-for="(item,index) in indexGuanLi">
                         <p>{{item.content}}
                             <!--卓越运营转型是海科最高层发动的为了实现极具挑战性的运营业绩目标而有意识开展的彻底、持久的运营变革。它通过对支撑业绩的员工能力、理念、制度和流程的持续改善来实现根本转变。--></p>
-                        <i class="hk">&#xe610;</i>
+                        <i class="hk" v-html="guanLiIcon[index]"></i>
                     </li>
                     <!--<li class="tab-box">
                         <p>
@@ -908,7 +869,7 @@
 
                     <div class="half features-wrap" style="width: 100%;">
                         <div class="features animate-box fadeInUp animated-fast" v-for="(item,index) in indexGuanLi">
-                            <span class="icon text-center"><i class="hk">&#xe610;</i></span>
+                            <span class="icon text-center"><i class="hk" v-html="guanLiIcon[index]"></i></span>
                             <div class="desc">
                                 <!--<h3>卓越运营管理</h3>
                                 <p>卓越运营转型是海科最高层发动的为了实现极具挑战性的运营业绩目标而有意识开展的彻底、持久的运营变革。它通过对支撑业绩的员工能力、理念、制度和流程的持续改善来实现根本转变。
@@ -968,14 +929,14 @@
         <div class="container">
             <div class="row animate-box">
                 <div class="col-md-6 col-md-offset-3 text-center qbootstrap-heading">
-                    <h2>世界级外脑合作</h2>
+                    <h2 style="text-align: center">世界级外脑合作</h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-4 col-md-2 animate-box text-center fadeInUp animated-fast"
                      v-for="(item,index) in word">
                     <div class="wrap">
-                        <img class="all-img" :src="item.imgPath">
+                        <img class="all-img" :src="api+item.imgPath">
 
                         <div class="img-txt">
                             <span class="size-small">{{item.title}}</span>
@@ -1099,7 +1060,7 @@
     <div class="container" id="qbootstrap-num">
         <div class="row animate-box">
             <div class="col-md-6 col-md-offset-3 text-center qbootstrap-heading">
-                <h2>全球市场布局</h2>
+                <h2 style="text-align: center">全球市场布局</h2>
             </div>
         </div>
         <div class="row animate-box">
@@ -1134,7 +1095,7 @@
         <div class="container">
             <div class="row animate-box">
                 <div class="col-md-6 col-md-offset-3 text-center qbootstrap-heading">
-                    <h2>全球合作伙伴</h2>
+                    <h2 style="text-align: center">全球合作伙伴</h2>
                 </div>
             </div>
 
@@ -1189,7 +1150,6 @@
 <script src="js/main.js"></script>
 <script>
     //$('.autoTab').tabNav();
-    //$('#zA7n').zA7n();
     //$('#playOne').autoVideo();
     //$('#playTwo').autoVideo();
     //$('#video4').autoVideo();
@@ -1200,12 +1160,13 @@
     new Vue({
         el: '.vueSwiper',
         data: {
+            api:api+'/',
             // 首页banner
             curIndex: 0,
             lunbo: [
+                /*{imgPath:'./images/banner2.png'},
                 {imgPath:'./images/banner2.png'},
-                {imgPath:'./images/banner2.png'},
-                {imgPath:'./images/banner2.png'}
+                {imgPath:'./images/banner2.png'}*/
             ],
             lunboPages: ['about_introduce.html', 'industry_chemical.html', 'college.html', 'institute.html'], //轮播页面跳转
             pageBanner:1, //页码
@@ -1215,7 +1176,7 @@
 
             // 首页信息
             videoInfo:{
-               content:'<h3>这是一个苹果</h3><p>张张</p><p>22222222222222222222222</p>'
+               content:''
             }, //视频区域上方信息
             pageInfo:1,
             rowsInfo:10,
@@ -1223,8 +1184,7 @@
 
             // 视频列表
             videoList: [
-                {videoPath:'./images/banner.mp4'},
-                {videoPath:'./images/movie.mp4'},
+                //{videoPath:'http://a.guangrao.ren/pic_file/20190904/video/b60c625b3b615e0b.mp4'},
             ],
             pageVideo:1,
             rowsVideo:10,
@@ -1233,11 +1193,11 @@
 
             // 产业布局
             imgs: [
+                /*{title:'123',content:'456',imgPath:'./images/banner2.png'},
                 {title:'123',content:'456',imgPath:'./images/banner2.png'},
                 {title:'123',content:'456',imgPath:'./images/banner2.png'},
                 {title:'123',content:'456',imgPath:'./images/banner2.png'},
-                {title:'123',content:'456',imgPath:'./images/banner2.png'},
-                {title:'123',content:'456',imgPath:'./images/banner2.png'}
+                {title:'123',content:'456',imgPath:'./images/banner2.png'}*/
             ],
             pageLogo:1,
             rowsLogo:10,
@@ -1245,7 +1205,7 @@
 
             // 管理体系+2
             indexGuanLi: [
-                {title:'1',content:'111'},
+                //{title:'1',content:'111'},
             ],
             guanLiIcon: ['&#xe610;', '&#xe61d;', '&#xe619;', '&#xe611;', '&#xe60f;'], // 管理体系icon
             pageGuanLi:1,
@@ -1254,10 +1214,10 @@
 
             // 世界外脑合作+2
             word: [
-                {imgPath:'./images/banner2.png',title:'123'},
+                //{imgPath:'./images/banner2.png',title:'123'},
             ],
             pageWorld:1,
-            rowsWorld:10,
+            rowsWorld:12,
             liveWorld:0,
         },
         mounted(){
@@ -1314,12 +1274,12 @@
                         var res = JSON.parse(res)
                         this.videoList = res.data.rows
                         console.log(this.videoList);
-                        this.$nextTick(() => {
+                        /*this.$nextTick(() => {
                             this.videoList.forEach((item, index) => {
                                 // 自动播放
                                 $("#play" + index).autoVideo()
                             })
-                        })
+                        })*/
                     }
                 })
             },
@@ -1377,10 +1337,11 @@
                 var img_id = "#img" + index;
                 $(img_id).hide();
                 var video = document.getElementById(video_id);
+                console.log(video);
                 //给视频标签添加缓存播放---video标签属性。
-                video.setAttribute("autoplay", "autoplay")
+                //video.setAttribute("autoplay", "autoplay")
                 //给视频标签添加循环播放---video标签属性。
-                video.setAttribute("loop", "loop")
+                //video.setAttribute("loop", "loop")
                 //播放视频
                 video.play();
             },
