--- a/inter_safe.html
+++ b/inter_safe.html
@@ -522,7 +522,7 @@
         el: '#vueSwiper',
         data: {
             list: {
-                content:'<h3>这是一个苹果</h3><p>张张</p><p>22222222222222222222222</p><img src="images/banner.png">'
+                //content:'<h3>这是一个苹果</h3><p>张张</p><p>22222222222222222222222</p><img src="images/banner.png">'
             },
             page:1,
             rows:10,
