--- a/media_publish_angle.html
+++ b/media_publish_angle.html
@@ -370,7 +370,7 @@
                     <ul class="row no-space public-ul" v-for="(item,index) in list">
                         <li class="col-xs-12 col-sm-12 col-md-12 ">
                             <div class="news-img publish-img">
-                                <img :src="item.imgPath" width="85%"/>
+                                <img :src="api+item.imgPath" width="85%"/>
                             </div>
                             <div>
                                 <h3>{{item.title}}</h3>
@@ -576,13 +576,14 @@
     new Vue({
         el: '.vueSwiper',
         data: {
+            api:api+'/',
             list: [
-                {
+                /*{
                     content:'<h3>这是一个苹果</h3><p>张张</p><p>22222222222222222222222</p>'
                 },
                 {
                     content:'<h3>这是一个苹果</h3><p>张张</p><p>22222222222222222222222</p>'
-                }
+                }*/
             ],
             curIndex: -1,
 
@@ -592,8 +593,8 @@
 
             // 宣传片
             videoList:[
-                {videoPath:'./images/banner.mp4'},
-                {videoPath:'./images/movie.mp4'},
+                /*{videoPath:'./images/banner.mp4'},
+                {videoPath:'./images/movie.mp4'},*/
             ],
             pageVideo:1,
             rowsVideo:10,
