--- a/about_award.html
+++ b/about_award.html
@@ -523,8 +523,8 @@
             api:api+'/',
             type: 1, //奖项荣誉
             list:[
-                {title:'123',imgpath:'./images/banner2.png'},
-                {title:'456',imgpath:'./images/banner2.png'},
+                /*{title:'123',imgpath:'./images/banner2.png'},
+                {title:'456',imgpath:'./images/banner2.png'},*/
             ],
             page:1,
             rows:10,
