--- a/employ_social.html
+++ b/employ_social.html
@@ -349,11 +349,11 @@
 <div id="page" class="vueSwiper">
     <!-- 社会招聘banner -->
     <div class="employ-banner text-center">
-        <img v-if="lunbo" :src="lunbo.imgPath" alt="图1" width="100%">
-        <div class="banner-txt">
+        <img v-if="lunbo" :src="api+lunbo.imgPath" alt="图1" width="100%">
+        <!--<div class="banner-txt">
             <h1 class="banner-txt-h1">海科集团社会招聘</h1>
             <h2 class="banner-txt-h2">Haike Group Social Recruitment</h2>
-        </div>
+        </div>-->
     </div>
 
     <!--<div class="employ-banner">
