--- a/index.html
+++ b/index.html
@@ -361,8 +361,8 @@
 
 <div id="page" class="vueSwiper">
 
-    <!--轮播-start 没有做-->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!--轮播-start-->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel" v-if="lunbo">
         <!-- 轮播（Carousel）指标 -->
         <ol class="carousel-indicators">
             <!--<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -464,7 +464,7 @@
                 <img src="images/welcom.png"/>
             </div>
 <!--视频信息-->
-            <div class="container animate-box fadeInUp animated-fast">
+            <div class="container animate-box fadeInUp animated-fast" v-if="videoInfo">
                 <!--<div class="top-main">
                     <h2 class="main-title">
                         欢迎来到海科<br>
@@ -475,19 +475,19 @@
                         凭借销售业绩的高质量增长荣膺达沃斯论坛“全球成长型公司”称号，是“国家高新技术企业”、“中国企业500强”、“中国制造业500强”、“国家级智能制造试点示范项目”。近年来，海科围绕转型变革精准发力，企业保持了稳健的发展势头。2018年实现销售收入620亿元。
                     </p>
                 </div>-->
-                <div style="padding: 10px;" class="top-main" v-html="videoInfo.content"></div>
+                <div style="padding: 20px 40px;" class="top-main" v-html="videoInfo.content"></div>
                 <!--<p class="main-box visible-xs visible-sm">
                     海科集团始建于1988年，目前已发展成为集石化能源、特种化学品、新能源材料、医药、融资租赁、国际贸易等为一体的综合性大型跨国企业集团。集团下属公司分布在东营、上海、江苏、浙江、安徽、香港、韩国和新加坡等国家和地区。集团总资产达185亿元，拥有员工4500余人。
                     凭借销售业绩的高质量增长荣膺达沃斯论坛“全球成长型公司”称号，是“国家高新技术企业”、“中国企业500强”、“中国制造业500强”、“国家级智能制造试点示范项目”。近年来，海科围绕转型变革精准发力，企业保持了稳健的发展势头。2018年实现销售收入620亿元。
                 </p>-->
-                <div style="padding: 10px;" class="main-box visible-xs visible-sm" v-html="videoInfo.content"></div>
+                <div style="padding: 20px 40px;" class="main-box visible-xs visible-sm" v-html="videoInfo.content"></div>
 
             </div>
         </div>
 
 
         <!--视频列表-->
-        <div class=" animate-box container">
+        <div class=" animate-box container" v-if="videoList">
             <div class="row">
                 <div class="container" style="text-align: center;">
                     <div class="col-xs-12 col-md-4 hidden-xs hidden-sm" v-for="(item,index) in videoList" :id="'play'+index">
@@ -680,11 +680,11 @@
     <!--2.【产业布局】end-->
 
     <!--3.图片区【3+2】-->
-    <div id="qbootstrap-testimonial" class="qbootstrap-bg-section">
+    <div id="qbootstrap-testimonial" class="qbootstrap-bg-section" v-if="imgs">
         <div class="container">
             <div class="row">
                 <!--animate-box-->
-                <div class="col-xs-12 col-sm-4" v-for="(item,index) in imgs">
+                <div class="col-xs-12 col-sm-4" v-for="(item,index) in imgs" style="padding-left: 0;padding-right: 0;" >
                     <div class="wrap">
                         <img class="all-img" :src="api+item.imgPath" />
                         <div class="img-txt">
@@ -788,7 +788,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container" v-if="indexGuanLi">
             <!--PC端可见【选项卡】start-->
             <div class="autoTab hidden-xs hidden-sm animate-box fadeInUp animated-fast row">
                 <ul class="tab-nav">
@@ -925,7 +925,7 @@
     <!--5.【管理与体系】选项卡end-->
 
     <!--6.【与世界贸易合作伙伴】合作伙伴start-->
-    <div id="qbootstrap-doctor">
+    <div id="qbootstrap-doctor" v-if="word">
         <div class="container">
             <div class="row animate-box">
                 <div class="col-md-6 col-md-offset-3 text-center qbootstrap-heading">
