--- a/person_overseas.html
+++ b/person_overseas.html
@@ -389,27 +389,32 @@
                     <p class="person-title">留学招聘</p>
                     <p class="person-con">{{item.title}} {{item.titleEN}}</p>
                     <ul class="row person_overseas-infor">
-                        <li class="col-sm-5">
+                        <li class="col-sm-5" style="min-height:100px;">
                             <p>地点</p>
                             <p>{{item.address}}</p>
                         </li>
-                        <li class="col-sm-7">
+
+                        <li class="col-sm-7" style="min-height:100px;">
                             <p>Location</p>
                             <p>{{item.addressEN}}</p>
                         </li>
-                        <li class="col-sm-5">
+
+                        <li class="col-sm-5" style="min-height:100px;">
                             <p>应聘要求</p>
                             <p>{{item.jobRequirements}}</p>
                         </li>
-                        <li class="col-sm-7">
+
+                        <li class="col-sm-7" style="min-height:100px;">
                             <p>Job Requirements</p>
                             <p>{{item.jobRequirementsEN}}</p>
                         </li>
-                        <li class="col-sm-5">
+
+                        <li class="col-sm-5" style="min-height:100px;">
                             <p>薪资待遇</p>
                             <p>{{item.salary}}</p>
                         </li>
-                        <li class="col-sm-7">
+
+                        <li class="col-sm-7" style="min-height:100px;">
                             <p>Salary</p>
                             <p>{{item.salaryEN}}</p>
                         </li>
@@ -529,11 +534,11 @@
                     </p>-->
 
                     <img :src="api+item.imgPath" width="60%"/>
-                    <div class="person-xj" v-if="index==0">
+                    <!--<div class="person-xj" v-if="index==0">
                         <h3>波士顿大学<span> 专业宣讲</span></h3><br/>
                         <span class="person-eg">{{item.titleEN}}</span>
                         <span class="person-tri"></span>
-                    </div>
+                    </div>-->
                     <p>
                         {{item.title}}<br/><!--CHIEF SCIENTIST-->
                     </p>
