--- a/index.html
+++ b/index.html
@@ -499,6 +499,7 @@
                                 @mouseover="videoPlayback(index)"
                                 @mouseout="videoStopped(index)"
                                 :src="item.videoPath"
+                                muted
                         >
                             <!--<source :src="api+item.videoPath" type="video/mp4">-->
                         </video>
